@@ -1,6 +1,6 @@
 /*
- * Copyright (C) 2020 Linux Studio Plugins Project <https://lsp-plug.in/>
- *           (C) 2020 Vladimir Sadovnikov <sadko4u@gmail.com>
+ * Copyright (C) 2024 Linux Studio Plugins Project <https://lsp-plug.in/>
+ *           (C) 2024 Vladimir Sadovnikov <sadko4u@gmail.com>
  *
  * This file is part of lsp-runtime-lib
  * Created on: 25 февр. 2019 г.
@@ -209,13 +209,6 @@ namespace lsp
             return STATUS_OK;
         }
 
-        size_t Thread::system_cores()
-        {
-            SYSTEM_INFO     os_sysinfo;
-            GetSystemInfo(&os_sysinfo);
-
-            return os_sysinfo.dwNumberOfProcessors;
-        }
 #else
         void *Thread::thread_launcher(void *arg)
         {
@@ -322,10 +315,6 @@ namespace lsp
             return STATUS_OK;
         }
 
-        size_t Thread::system_cores()
-        {
-            return sysconf(_SC_NPROCESSORS_ONLN);
-        }
 #endif /* PLATFORM_WINDOWS */
 
     } /* namespace ipc */
